2010-09-21  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: fixed loading widget-dialog,
	it's now in simple-dialog. Also change the behaviour a bit: Previously the
	buttons label changed from "Yes" to "No" depending on state, now it's only
	"Enable", this to improve window-matcher appearance (scheme-boolean is only
	used in window-matcher and an revised version (with real fix) will come with
	Sawfish 3.0.0).

	* debian/sawfish-data.install.in: remove monitor.png from here, too.

	* lisp/sawfish/wm/ext/edge-flip.jl: some comments on upcoming changes
	in 2.90.0 cycle

	* lisp/sawfish/wm/ext/infinite-desktop.jl: improved name of the functions.
	some comments on upcoming changes in 2.90.0 cycle. export
	`infinite-desktop-enable' (so that it can be enabled via sawfishrc, too)

2010-09-21  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/windows.jl: window-property 'never-delete'
	spec change.
	It was only used in delete-window-safely. But now, this property
	is valid for some others too, but only when they are called
	interactively. This allows user to choose the mouse binding of
	"close-button".
        The key binding of "close-button" is reverted to 'delete-window',
	the previous.

2010-09-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/old-window-menu.jl: removed. it has been replaced
	by beos-window-menu in version 0.28.1

	* lisp/sawfish/wm/ext/3d-hack.jl: removed.

	* lisp/sawfish/cfg/Makefile.in
	* lisp/sawfish/gtk/Makefile.in
	* po/POTFILES.in
	* po/sawfish.pot: updated

	* lisp/sawfish/gtk/widgets/simple-dialog.jl: fix in it's define-structure

	* lisp/sawfish/cfg/utils.jl: added. contains `remove-newlines' and
	`beautify-symbol-name' functions.

	* lisp/sawfish/cfg/layout.jl
	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/keymap.jl
	* lisp/sawfish/cfg/widgets/match-window.jl: removed multiple definitons