@@ -1,3 +1,7 @@
+2010-09-25  Teika kazura <teika@lavabit.com>
+	* lisp/sawfish/wm/ext/old-window-menu.jl: Resurrected. It was
+	removed in commit cf79775e.
+
 2010-09-21  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: fixed loading widget-dialog,
 	it's now in simple-dialog. Also change the behaviour a bit: Previously the
